# libffi-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: release.yml  test.yml  tidy.yml  upgrade_libffi.yml
libffi-rs/: CHANGELOG.md  Cargo.toml  README.md
libffi-rs/examples/: libloading.rs  sort.rs
libffi-rs/src/: lib.rs  low.rs
libffi-rs/src/high/: call.rs  mod.rs  types.rs
libffi-rs/src/middle/: builder.rs  mod.rs  types.rs  util.rs
libffi-sys-rs/: CHANGELOG.md  Cargo.toml  README.md
libffi-sys-rs/include/msvc/aarch64/: ffi.h  fficonfig.h
libffi-sys-rs/include/msvc/x86/: ffi.h  fficonfig.h
libffi-sys-rs/include/msvc/x86_64/: ffi.h  fficonfig.h
libffi-sys-rs/src/: arch.rs  lib.rs
scripts/: qemutests.sh
