[package]
name = "libffi"
version = "5.1.0"
authors.workspace = true
description = "Rust bindings for libffi"
repository.workspace = true
readme = "README.md"
license.workspace = true
keywords.workspace = true
categories = ["development-tools::ffi"]
edition.workspace = true
rust-version.workspace = true

[dependencies]
libffi-sys = { path = "../libffi-sys-rs", version = "^4.1", default-features = false }
libc = "0.2.65"

[dev-dependencies]
libloading = ">=0.8, <=0.9"

[features]
complex = []
default = ["std"]
std = ["libffi-sys/std"]
system = ["libffi-sys/system"]
# Can be used to accelerate check builds by not building C code
check_only = ["libffi-sys/check_only"]

[package.metadata.docs.rs]
features = ["std", "system"]

[lints]
workspace = true
