[package]
name = "libffi-sys"
version = "4.1.0"
authors.workspace = true
links = "ffi"
build = "build/build.rs"
description = "Raw Rust bindings for libffi"
repository.workspace = true
readme = "README.md"
license.workspace = true
keywords.workspace = true
categories = ["development-tools::ffi"]
edition.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = []
system = []
complex = []
# Can be used to accelerate check builds by not building C code
check_only = []

[package.metadata.docs.rs]
features = ["std", "system"]

[build-dependencies]
cc = "1.0"

[lints]
workspace = true
